made controls responsive

--- a/src/packages/storybook/.storybook/preview-head.html
+++ b/src/packages/storybook/.storybook/preview-head.html
@@ -13,8 +13,20 @@
 />
 
 <script>
+  const makeControlsResponsive = () => {
+    setTimeout(() => {
+      document
+        .getElementsByClassName("sbdocs-content")[0]
+        .lastChild.classList.add("overflow-x-scroll");
+    }, 10000);
+  };
   window.addEventListener("load", () => {
     document.body.setAttribute("data-bs-theme", "dark");
+
+    makeControlsResponsive();
+  });
+  window.addEventListener("change", () => {
+    makeControlsResponsive();
   });
 </script>
 
