permanent fix for storybook v8 controls responsiveness

--- a/src/packages/storybook/.storybook/preview-head.html
+++ b/src/packages/storybook/.storybook/preview-head.html
@@ -13,20 +13,8 @@
 />
 
 <script>
-  const makeControlsResponsive = () => {
-    setTimeout(() => {
-      document
-        .getElementsByClassName("sbdocs-content")[0]
-        .lastChild.classList.add("overflow-x-scroll");
-    }, 10000);
-  };
   window.addEventListener("load", () => {
     document.body.setAttribute("data-bs-theme", "dark");
-
-    makeControlsResponsive();
-  });
-  window.addEventListener("change", () => {
-    makeControlsResponsive();
   });
 </script>
 
@@ -40,5 +28,11 @@
   [id^="story--atoms-icon"] {
     width: 120px;
     height: 120px;
+  }
+  #storybook-docs
+    > .sbdocs-wrapper
+    > .sbdocs-content
+    > div {
+    overflow-x: scroll;
   }
 </style>
